# coloma

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
backend/: .env.template  api.py  auth.py  config.py  deploy.py  images.py  llm_profiler.py  logger.py  main.py  pressure.py  profiler.py  proxy.py  tasks.py  tee.py  upstream.py  validation.py  verification.py  vllm_bench_client.py
src/: App.tsx  main.tsx  styles.css  tabRegistry.ts  types.ts
src/components/: BenchCalculator.tsx  BenchCharts.tsx  ChatTab.tsx  CompareTab.tsx  ConfigTab.tsx  Dashboard.tsx  DashboardAccessGate.tsx  DeployTab.tsx  DeploymentSettingsTab.tsx  JobTimeEstimator.tsx  PdfImportModal.tsx  PressureTestTab.tsx  TrafficTab.tsx  benchMetricSpecs.ts
src/components/charts/: SeriesChart.tsx  chartFormatters.ts
src/components/deploy/: DeploymentPanel.tsx  profileComparison.ts  useDeploymentController.ts
src/components/layout/: AppShell.tsx  EndpointStatus.tsx  GpuStatus.tsx  Sidebar.tsx
src/components/profiler/: ArtifactCharts.tsx  ContextLengthWarnings.tsx  DeployConfigurationForms.tsx  DockerImageSelector.tsx  ProfilerSection.tsx  ProfilerSetupForm.tsx  ProfilerWorkflow.tsx  WarningNotice.tsx  useProfilerController.ts
src/lib/: api.ts  benchPoints.ts  clipboard.ts  jobModel.test.ts  jobModel.ts  queries.ts  schema.ts  sse.ts
tests/: conftest.py  test_auth.py  test_config.py  test_deploy.py  test_llm_profiler.py  test_pressure.py  test_profiler.py  test_proxy.py  test_vllm_bench_client.py
(+3 files in other folders)
