[project]
name = "coloma"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "anyio<4.10",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "huggingface_hub>=0.34.0",
  "openai>=1.60.0",
  "pdf2image>=1.17.0",
  "pillow>=10.0.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.6",
  "pytest>=8.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
